--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\tokyr\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=C:/apache-tomcat-10.1.11
-j2ee.server.instance=tomcat101:home=C:\\apache-tomcat-10.1.11
-user.properties.file=C:\\Users\\tokyr\\AppData\\Roaming\\NetBeans\\17\\build.properties
+deploy.ant.properties.file=C:\\Users\\Nathanalex\\AppData\\Roaming\\NetBeans\\20\\tomcat101.properties
+file.reference.JBase.jar=C:\\Users\\Nathanalex\\Desktop\\JBase.jar
+file.reference.lombok.jar=C:\\Users\\Nathanalex\\Desktop\\lombok.jar
+file.reference.postgresql-42.5.0.jar=C:\\Users\\Nathanalex\\Desktop\\postgresql-42.5.0.jar
+file.reference.servlet-api.jar=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1\\lib\\servlet-api.jar
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
+user.properties.file=C:\\Users\\Nathanalex\\AppData\\Roaming\\NetBeans\\20\\build.properties
