--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\tokyr\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-file.reference.JBase.jar=D:\\AUTRES\\Library\\JBase.jar
-file.reference.lombok.jar=D:\\AUTRES\\Library\\lombok.jar
-file.reference.postgresql-42.5.0.jar=D:\\AUTRES\\Library\\postgresql-42.5.0.jar
-file.reference.servlet-api.jar=D:\\AUTRES\\Library\\servlet-api.jar
-j2ee.server.home=C:/apache-tomcat-10.1.11
-j2ee.server.instance=tomcat101:home=C:\\apache-tomcat-10.1.11
-user.properties.file=C:\\Users\\tokyr\\AppData\\Roaming\\NetBeans\\17\\build.properties
+deploy.ant.properties.file=/home/rj-toky/.netbeans/16/tomcat90.properties
+j2ee.server.home=/usr/share/tomcat10
+j2ee.server.instance=tomcat90:home=/usr/share/tomcat10
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=/home/rj-toky/.netbeans/16/build.properties
